[package]
name = "pz5"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
config = "0.13"
clap = { version = "4.4", features = ["derive", "env"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
anyhow = "1.0"
